--- a/learning lib/Sk-learn/SVM.ipynb
+++ b/learning lib/Sk-learn/SVM.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +68,21 @@
      "text": [
       "(52500, 784)\n",
       "Fitting 3 folds for each of 30 candidates, totalling 90 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=2)]: Done  46 tasks      | elapsed: 51.0min\n",
+      "[Parallel(n_jobs=2)]: Done  90 out of  90 | elapsed: 104.4min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters set:\n"
      ]
     }
    ],
@@ -92,20 +107,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best score: 0.966\n",
+      "Best parameters set:\n",
+      "\tclf__C: 3\n",
+      "\tclf__gamma: 0.01\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        0.0       0.98      0.98      0.98      1730\n",
+      "        1.0       0.99      0.98      0.98      2014\n",
+      "        2.0       0.95      0.97      0.96      1796\n",
+      "        3.0       0.97      0.96      0.96      1799\n",
+      "        4.0       0.97      0.98      0.97      1658\n",
+      "        5.0       0.97      0.97      0.97      1615\n",
+      "        6.0       0.98      0.98      0.98      1694\n",
+      "        7.0       0.97      0.98      0.97      1782\n",
+      "        8.0       0.96      0.96      0.96      1682\n",
+      "        9.0       0.97      0.96      0.96      1730\n",
+      "\n",
+      "avg / total       0.97      0.97      0.97     17500\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print ('Best score: %0.3f' % grid_search.best_score_)\n",
-    "print ()'Best parameters set:')\n",
-    "best_parameters = grid_search.best_estimator_.gret_params()\n",
+    "print ('Best parameters set:')\n",
+    "best_parameters = grid_search.best_estimator_.get_params()\n",
     "for param_name in sorted(parameters.keys()):\n",
     "    print('\\t%s: %r' % (param_name, best_parameters[param_name]))\n",
     "predictions = grid_search.predict(X_test)\n",
     "print(classification_report(y_test, predictions))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
