--- a/kaggle/titanic/titanic.ipynb
+++ b/kaggle/titanic/titanic.ipynb
@@ -493,14 +493,14 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Hocking, Mr. Richard George</td>\n",
+       "      <td>Scanlan, Mr. James</td>\n",
        "      <td>male</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1601</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>C23 C25 C27</td>\n",
+       "      <td>B96 B98</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -628,44 +628,44 @@
        "</div>"
       ],
       "text/plain": [
-       "        PassengerId    Survived      Pclass                         Name  \\\n",
-       "count    891.000000  891.000000  891.000000                          891   \n",
-       "unique          NaN         NaN         NaN                          891   \n",
-       "top             NaN         NaN         NaN  Hocking, Mr. Richard George   \n",
-       "freq            NaN         NaN         NaN                            1   \n",
-       "mean     446.000000    0.383838    2.308642                          NaN   \n",
-       "std      257.353842    0.486592    0.836071                          NaN   \n",
-       "min        1.000000    0.000000    1.000000                          NaN   \n",
-       "25%      223.500000    0.000000    2.000000                          NaN   \n",
-       "50%      446.000000    0.000000    3.000000                          NaN   \n",
-       "75%      668.500000    1.000000    3.000000                          NaN   \n",
-       "max      891.000000    1.000000    3.000000                          NaN   \n",
+       "        PassengerId    Survived      Pclass                Name   Sex  \\\n",
+       "count    891.000000  891.000000  891.000000                 891   891   \n",
+       "unique          NaN         NaN         NaN                 891     2   \n",
+       "top             NaN         NaN         NaN  Scanlan, Mr. James  male   \n",
+       "freq            NaN         NaN         NaN                   1   577   \n",
+       "mean     446.000000    0.383838    2.308642                 NaN   NaN   \n",
+       "std      257.353842    0.486592    0.836071                 NaN   NaN   \n",
+       "min        1.000000    0.000000    1.000000                 NaN   NaN   \n",
+       "25%      223.500000    0.000000    2.000000                 NaN   NaN   \n",
+       "50%      446.000000    0.000000    3.000000                 NaN   NaN   \n",
+       "75%      668.500000    1.000000    3.000000                 NaN   NaN   \n",
+       "max      891.000000    1.000000    3.000000                 NaN   NaN   \n",
        "\n",
-       "         Sex         Age       SibSp       Parch Ticket        Fare  \\\n",
-       "count    891  714.000000  891.000000  891.000000    891  891.000000   \n",
-       "unique     2         NaN         NaN         NaN    681         NaN   \n",
-       "top     male         NaN         NaN         NaN   1601         NaN   \n",
-       "freq     577         NaN         NaN         NaN      7         NaN   \n",
-       "mean     NaN   29.699118    0.523008    0.381594    NaN   32.204208   \n",
-       "std      NaN   14.526497    1.102743    0.806057    NaN   49.693429   \n",
-       "min      NaN    0.420000    0.000000    0.000000    NaN    0.000000   \n",
-       "25%      NaN   20.125000    0.000000    0.000000    NaN    7.910400   \n",
-       "50%      NaN   28.000000    0.000000    0.000000    NaN   14.454200   \n",
-       "75%      NaN   38.000000    1.000000    0.000000    NaN   31.000000   \n",
-       "max      NaN   80.000000    8.000000    6.000000    NaN  512.329200   \n",
+       "               Age       SibSp       Parch Ticket        Fare    Cabin  \\\n",
+       "count   714.000000  891.000000  891.000000    891  891.000000      204   \n",
+       "unique         NaN         NaN         NaN    681         NaN      147   \n",
+       "top            NaN         NaN         NaN   1601         NaN  B96 B98   \n",
+       "freq           NaN         NaN         NaN      7         NaN        4   \n",
+       "mean     29.699118    0.523008    0.381594    NaN   32.204208      NaN   \n",
+       "std      14.526497    1.102743    0.806057    NaN   49.693429      NaN   \n",
+       "min       0.420000    0.000000    0.000000    NaN    0.000000      NaN   \n",
+       "25%      20.125000    0.000000    0.000000    NaN    7.910400      NaN   \n",
+       "50%      28.000000    0.000000    0.000000    NaN   14.454200      NaN   \n",
+       "75%      38.000000    1.000000    0.000000    NaN   31.000000      NaN   \n",
+       "max      80.000000    8.000000    6.000000    NaN  512.329200      NaN   \n",
        "\n",
-       "              Cabin Embarked  \n",
-       "count           204      889  \n",
-       "unique          147        3  \n",
-       "top     C23 C25 C27        S  \n",
-       "freq              4      644  \n",
-       "mean            NaN      NaN  \n",
-       "std             NaN      NaN  \n",
-       "min             NaN      NaN  \n",
-       "25%             NaN      NaN  \n",
-       "50%             NaN      NaN  \n",
-       "75%             NaN      NaN  \n",
-       "max             NaN      NaN  "
+       "       Embarked  \n",
+       "count       889  \n",
+       "unique        3  \n",
+       "top           S  \n",
+       "freq        644  \n",
+       "mean        NaN  \n",
+       "std         NaN  \n",
+       "min         NaN  \n",
+       "25%         NaN  \n",
+       "50%         NaN  \n",
+       "75%         NaN  \n",
+       "max         NaN  "
       ]
      },
      "execution_count": 7,
@@ -880,10 +880,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Hocking, Mr. Richard George</td>\n",
+       "      <td>Scanlan, Mr. James</td>\n",
        "      <td>male</td>\n",
        "      <td>1601</td>\n",
-       "      <td>C23 C25 C27</td>\n",
+       "      <td>B96 B98</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -899,11 +899,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                               Name   Sex Ticket        Cabin Embarked\n",
-       "count                           891   891    891          204      889\n",
-       "unique                          891     2    681          147        3\n",
-       "top     Hocking, Mr. Richard George  male   1601  C23 C25 C27        S\n",
-       "freq                              1   577      7            4      644"
+       "                      Name   Sex Ticket    Cabin Embarked\n",
+       "count                  891   891    891      204      889\n",
+       "unique                 891     2    681      147        3\n",
+       "top     Scanlan, Mr. James  male   1601  B96 B98        S\n",
+       "freq                     1   577      7        4      644"
       ]
      },
      "execution_count": 9,
@@ -945,6 +945,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "count    891.000000\n",
+      "mean       2.308642\n",
+      "std        0.836071\n",
+      "min        1.000000\n",
+      "25%        2.000000\n",
+      "50%        3.000000\n",
+      "75%        3.000000\n",
+      "max        3.000000\n",
+      "Name: Pclass, dtype: float64\n",
       "        Survived\n",
       "Pclass          \n",
       "1       0.629630\n",
@@ -955,7 +964,7 @@
    ],
    "source": [
     "# 1. Pclass\n",
-    "train_df['Pclass'].describe()\n",
+    "print(train_df['Pclass'].describe())\n",
     "#there is no missing value on this feature. now let check it's impact on our train set\n",
     "print(train_df[['Pclass', 'Survived']].groupby(['Pclass']).mean())"
    ]
