--- a/scratch_algorithms/gradient_descent_linear_regression.ipynb
+++ b/scratch_algorithms/gradient_descent_linear_regression.ipynb
@@ -34,15 +34,14 @@
     "\n",
     "w = w − alpha × delta\n",
     "- w: weights\n",
-    "- alpha: learning rate where we must configure(Ex: 0.1)\n",
+    "- alpha: is learning rate where we must configure(Ex: 0.1)\n",
     "- delta: \n",
     "\n",
-    "linear regression prediction equation: y = B0 + B1 * x\n",
-    "\n",
+    "update \n",
+    "y(i) = B0 + B1 * x(i)\n",
     "error = p(i) - y(i)\n",
-    "\n",
     "B0(t +1) = B0(t) - alpha * error\n",
-    "B1(t+1) = B1(t) -alpha * error * x\n",
+    "B1(t+1) = B1(t) - alpha * error * x(i)\n",
     "\n",
     "One pass through the training dataset is called an epoch."
    ]
@@ -187,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# put it all together\n",
@@ -274,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
